HelloUltraviolet/Fixtures/RejectedSource/Expressions/AllOperandRequiresInput/Expected.uv
//! Expected diagnostic metadata for the AllOperandRequiresInput rejected-source specimen.

expectedDiagnostic("E-CON-0271", "rule.21.All-In-Err")
